objects/Automation_Rule__c.object
<CustomObject>
    <label>Automation Rule</label>
    <pluralLabel>Automation Rules</pluralLabel>
    <nameField>
        <label>Automation Rule Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Password Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Update</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Password Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Update</fullName>
            </picklistValues>
        </picklist>
    </fields>
</CustomObject>